# web-scrapers

./: .env.example  .gitignore  AGENTS.md  INSTRUCTIONS.md  MEMORY.md  README.md  TODO.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4c7ccbc3bff7_initial_schema.py
config/: feeds.yaml  jobs.yaml  subreddits.yaml
tests/: conftest.py  test_bridge.py  test_cli.py  test_config.py  test_coordinator.py  test_db.py  test_models.py  test_news_scraper.py  test_queries.py  test_reddit_scraper.py  test_sentiment.py  test_symbol_mapping.py  test_universal_scraper.py
web_scrapers/: __init__.py  cli.py  config.py  coordinator.py
web_scrapers/analysis/: __init__.py  sentiment.py
web_scrapers/bridge/: __init__.py  nexus.py
web_scrapers/db/: __init__.py  engine.py  models.py  queries.py  repository.py
web_scrapers/models/: __init__.py  base.py  news.py  reddit.py  web.py
web_scrapers/scheduler/: __init__.py  scheduler.py
web_scrapers/scrapers/: __init__.py  base.py  news.py  reddit.py  universal.py
web_scrapers/utils/: __init__.py  symbol_mapping.py
