# Version: v0.5.0
[project]
name = "web-scrapers"
version = "0.5.0"
description = "Modular web scraping toolkit for financial intelligence gathering"
authors = [
    {name = "Turiya"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "praw (>=7.8.0,<8.0.0)",
    "feedparser (>=6.0.0,<7.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "vaderSentiment (>=3.3.0,<4.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "typer (>=0.15.0,<1.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "web_scrapers"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires running PostgreSQL database",
]
filterwarnings = [
    "ignore:coroutine 'run_all_with_ingest' was never awaited:RuntimeWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
